Fixes selfserve layout issue

--- a/assets/_styles/internal.scss
+++ b/assets/_styles/internal.scss
@@ -220,10 +220,10 @@ $gutter: 1.25%;
   }
 }
 
-/* 4.4 Secondary header
+/* 4.4 User header
    ========================================================================== */
 
-@import '_secondary-header';
+@import '_user-header';
 
 /* 4.5 Page header
    ========================================================================== */
@@ -237,7 +237,7 @@ $gutter: 1.25%;
   &__wrapper {
     @extend .page-wrapper;
     margin: 0 $gutter .75em $gutter;
-    width: 95%;
+    width: 97.5%;
     @media(max-width: 640px) {
       width: 92%;
       margin: 0 4% 1em 4%;
