--- a/assets/_styles/selfserve.scss
+++ b/assets/_styles/selfserve.scss
@@ -65,24 +65,24 @@ $gutter: 2.5%;
 
 .global-header {
     background: $black;
-    color: $white;
+    color: $white;    
     &__wrapper {
         @extend .page-wrapper;
-        padding: .5em 0;
+        margin: 0 auto;
+        padding: .5em;        
         overflow: auto;
     }
     &__logo {
         float: left;
-        margin-left: 2.5%;
-        padding: 6px 0 1px 0;
-        overflow: visible;
+        padding-top: 6px;
         color: white;
         font-weight: 700;
         font-size: 30px;
         line-height: 1;
-        text-decoration: none;  
+        text-decoration: none;
+        margin-left: $gutter;
         img {
-            margin-top: -2px;
+            margin-top: -3px;
             width: 35px;
             height: 31px;
             padding-right: 6px;
@@ -98,10 +98,9 @@ $gutter: 2.5%;
     &__title {
         @extend %h4;
         clear: none;
-        margin-right: 2.5%;
         overflow: hidden;
         text-align: right;
-        margin-top: .25em;
+        margin: .25em $gutter 0 0;
         display: block;
         @media (max-width: 640px){
             display: none;
@@ -110,10 +109,30 @@ $gutter: 2.5%;
 
 }
 
-/* 4.2 Secondary header
+/* 4.2 User header
    ========================================================================== */
 
-@import '_secondary-header';
+@import '_user-header';
+
+.phase {
+  float: left;
+  &__tag {
+    background: $alpha-colour;
+    color: $white;
+    letter-spacing: .2em;
+    font-weight: 700;
+    font-size: .75em;
+    text-transform: uppercase;
+    padding: .4em .6em;
+    margin-right: 1em;
+    position: relative;
+  }
+  &__message {
+    @media (max-width: 780px){
+      display: none;
+    }
+  }
+}
 
 /* 4.3 Page header
    ========================================================================== */
